--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pytest = "^7.3.1"
 black = "^23.3.0"
 jupyter = "^1.0.0"
 ipykernel = "^6.25.0"
+mypy = "^1.5.1"
 
 [build-system]
 requires = ["poetry-core"]
