--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ sqlalchemy = "^2.0.25"
 pyscopg2 = "^66.0.2"
 pydantic-settings = "^2.0.3"
 alembic = "^1.12.0"
+psycopg2-binary = "^2.9.9"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.3.1"
