--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,7 @@ pytest = "^7.3.1"
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
 mypy = "^1.5.1"
+ruff = "^0.1.13"
 
 [build-system]
 requires = ["poetry-core"]
