add concurrency to gha

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -13,6 +13,11 @@ on:
       - backend/**
       - .github/**
   workflow_dispatch:
+concurrency:
+  group: "${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}"
+  cancel-in-progress: true
+permissions:
+  contents: read
 jobs:
   black:
     uses: ./.github/workflows/reusable-poetry-setup.yml
