--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,14 +16,16 @@ RUN poetry export -f requirements.txt --output requirements.txt --without-hashes
 
 FROM python:3.11-slim
 
-WORKDIR /code
+WORKDIR /
 
-COPY --from=requirements-stage /tmp/requirements.txt /code/requirements.txt
+COPY --from=requirements-stage /tmp/requirements.txt /requirements.txt
 
-RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
+RUN pip install --no-cache-dir --upgrade -r /requirements.txt
 
-COPY . /code
+COPY . .
 
 EXPOSE 8000
+
+ENV PYTHONPATH=/app
 
 CMD ["./scripts/start.sh"]
