--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,28 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1 
 ENV POETRY_VERSION=1.5.0
 
+RUN apt-get update \
+    && apt-get install -y wget gnupg2 curl \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN apt-get update && \
+    apt-get upgrade -y && \
+    apt-get install -y unzip jq 
+
+# Download and install Chrome
+RUN CHROME_URL=$(curl -s https://googlechromelabs.github.io/chrome-for-testing/last-known-good-versions-with-downloads.json | jq -r '.channels.Stable.downloads.chrome[] | select(.platform == "linux64") | .url') \
+    && curl -sSLf --retry 3 --output /tmp/chrome-linux64.zip "$CHROME_URL" \
+    && unzip /tmp/chrome-linux64.zip -d /opt \
+    && ln -s /opt/chrome-linux64/chrome /usr/local/bin/chrome \
+    && rm /tmp/chrome-linux64.zip
+
+# Download and install latest chromedriver
+RUN CHROMEDRIVER_URL=$(curl -s https://googlechromelabs.github.io/chrome-for-testing/last-known-good-versions-with-downloads.json | jq -r '.channels.Stable.downloads.chromedriver[] | select(.platform == "linux64") | .url') \
+    && curl -sSLf --retry 3 --output /tmp/chromedriver-linux64.zip "$CHROMEDRIVER_URL" \
+    && unzip -o /tmp/chromedriver-linux64.zip -d /tmp \
+    && mv -f /tmp/chromedriver-linux64/chromedriver "/usr/local/bin/chromedriver" \
+    && chmod +x "/usr/local/bin/chromedriver"
+
 RUN pip install poetry==${POETRY_VERSION}
 
 COPY ./pyproject.toml ./poetry.lock* /tmp/
