--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,8 @@ pydantic-settings = "^2.0.3"
 alembic = "^1.12.0"
 psycopg2-binary = "^2.9.9"
 selenium = "^4.12.0"
+bs4 = "^0.0.2"
+types-beautifulsoup4 = "^4.12.0.20240106"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.3.1"
