--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -5,8 +5,10 @@ services:
     build: .
     ports:
       - "8000:8000"
+    ## https://stackoverflow.com/questions/35832095/difference-between-links-and-depends-on-in-docker-compose-yml
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     env_file:
       - .env
     environment:
@@ -19,6 +21,11 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     ports:
       - "5432:5432"
     volumes:
