--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -24,6 +24,69 @@ RUN pip install --no-cache-dir --upgrade -r /requirements.txt
 
 COPY . .
 
+WORKDIR /tmp
+
+RUN apt-get update \
+    && apt-get install -y \
+    wget \
+    gnupg2 \
+    curl \
+    unzip \
+    jq \
+    ca-certificates \
+    fonts-liberation \
+    libasound2 \
+    libatk-bridge2.0-0 \
+    libatk1.0-0 \
+    libc6 \
+    libcairo2 \
+    libcups2 \
+    libdbus-1-3 \
+    libexpat1 \
+    libfontconfig1 \
+    libgbm1 \
+    libgcc1 \
+    libglib2.0-0 \
+    libgtk-3-0 \
+    libnspr4 \
+    libnss3 \
+    libpango-1.0-0 \
+    libpangocairo-1.0-0 \
+    libstdc++6 \
+    libx11-6 \
+    libx11-xcb1 \
+    libxcb1 \
+    libxcomposite1 \
+    libxcursor1 \
+    libxdamage1 \
+    libxext6 \
+    libxfixes3 \
+    libxi6 \
+    libxrandr2 \
+    libxrender1 \
+    libxss1 \
+    libxtst6 \
+    lsb-release \
+    xdg-utils \
+    libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+# Download and install Chrome
+RUN CHROME_URL=$(curl -s https://googlechromelabs.github.io/chrome-for-testing/last-known-good-versions-with-downloads.json | jq -r '.channels.Stable.downloads.chrome[] | select(.platform == "linux64") | .url') \
+    && curl -sSLf --retry 3 --output /tmp/chrome-linux64.zip "$CHROME_URL" \
+    && unzip /tmp/chrome-linux64.zip -d /opt \
+    && ln -s /opt/chrome-linux64/chrome /usr/local/bin/chrome \
+    && rm /tmp/chrome-linux64.zip
+
+# Download and install latest chromedriver
+RUN CHROMEDRIVER_URL=$(curl -s https://googlechromelabs.github.io/chrome-for-testing/last-known-good-versions-with-downloads.json | jq -r '.channels.Stable.downloads.chromedriver[] | select(.platform == "linux64") | .url') \
+    && curl -sSLf --retry 3 --output /tmp/chromedriver-linux64.zip "$CHROMEDRIVER_URL" \
+    && unzip -o /tmp/chromedriver-linux64.zip -d /tmp \
+    && mv -f /tmp/chromedriver-linux64/chromedriver "/usr/local/bin/chromedriver" \
+    && chmod +x "/usr/local/bin/chromedriver"
+
+WORKDIR /
+
 EXPOSE 8000
 
 ENV PYTHONPATH=/app
