--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,8 +20,9 @@ types-beautifulsoup4 = "^4.12.0.20240106"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.3.1"
+httpx = "^0.26.0"
 
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.group.lint.dependencies]
 black = "^23.3.0"
 mypy = "^1.5.1"
 ruff = "^0.1.13"
