--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -25,6 +25,7 @@ pytest = "^7.3.1"
 black = "^23.3.0"
 mypy = "^1.5.1"
 ruff = "^0.1.13"
+pandas-stubs = "^2.1.4.231227"
 
 
 [tool.poetry.group.dev.dependencies]
