--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,7 @@ psycopg2-binary = "^2.9.9"
 selenium = "^4.12.0"
 bs4 = "^0.0.2"
 types-beautifulsoup4 = "^4.12.0.20240106"
+pandas = "^2.2.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.3.1"
@@ -30,6 +31,7 @@ pandas-stubs = "^2.1.4.231227"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.0"
+jupyter = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
