--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,7 @@ selenium = "^4.12.0"
 bs4 = "^0.0.2"
 types-beautifulsoup4 = "^4.12.0.20240106"
 pandas = "^2.2.0"
+lxml = "^5.1.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.3.1"
